2014-03-30  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_config.php, include/auth/mysql.php,
	godmode/setup/setup_auth.php: Added the feature to fallback to local
	authentication when remote authentication is failed.

2014-03-28  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php: set the zeroes values in the boolean
	graph as zeroes values.
	
	Incident: #665

2014-03-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/reporting/map_builder.php
	godmode/netflow/nf_edit_form.php
	include/ajax/visual_console_builder.ajax.php	
	operation/menu.php: Fix ACLs in these views.

2014-03-28  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_gis.php: set a white background for the
	label of mouse position.
	
	Incident: #583

2014-03-28  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_gis.php, operation/agentes/gis_view.php: fixed
	the GIS view for agents.
	
	Incident: #611
	
	BACKPORTED FROM THE BRANCH PANDORA_5

2014-03-27  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/gettext.php: fixed the PHP warnings.
	
	Incident: #656

2014-03-27  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ca.mo
	include/languages/tr.mo
	include/languages/de.mo
	include/languages/ja.mo
	include/languages/pt_BR.mo
	include/languages/ru.mo
	include/languages/el.mo
	include/languages/nl.mo
	include/languages/es.po
	include/languages/pl.mo
	include/languages/it.mo
	include/languages/pt.mo
	include/languages/index.pot
	include/languages/zh_CN.mo
	include/languages/cs.mo
	include/languages/es.mo
	include/languages/en_GB.mo
	include/languages/sk.mo
	include/languages/en.mo
	include/languages/ar.mo
	include/languages/fr.mo: Update languages.

2014-03-27  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/alerts/alert_commands.php
	  godmode/snmpconsole/snmp_alert.php: Fixed
	bug:load recovery fields of alert actions.

2014-03-27  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_config.php,