@@ -1,3 +1,9 @@
+2014-03-31  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/agentes/agent_conf_gis.php,
+	operation/agentes/gis_view.php: changed the style to message of
+	error to set the standar style of new Pandora.
+
 2014-03-30  Junichi Satoh  <junichi@rworks.jp>
 
 	* include/functions_config.php, include/auth/mysql.php,
